src/test/ui/type-alias-impl-trait/coherence.stderr
error: cannot implement trait on type alias impl trait
  --> $DIR/coherence.rs:14:41
   |
LL | impl<T> foreign_crate::ForeignTrait for AliasOfForeignType<T> {}
   |                                         ^^^^^^^^^^^^^^^^^^^^^
   |
note: type alias impl trait defined here
  --> $DIR/coherence.rs:9:30
   |
LL | type AliasOfForeignType<T> = impl LocalTrait;
   |                              ^^^^^^^^^^^^^^^

error: aborting due to previous error

